// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LeagueCard > renders correctly when not selected 1`] = `
"<article class="rounded-xl h-full border bg-light/80 p-4 transition-colors cursor-pointer select-none border-dark/30 hover:border-light/20" role="button" tabindex="0" aria-label="View badge for English Premier League" aria-pressed="false">
  <div class="flex items-start justify-between gap-3">
    <div class="min-w-0 flex-1">
      <h3 class="truncate line-clamp-2 text-sm font-semibold text-dark">English Premier League</h3>
      <p class="mt-0.5 truncate text-xs text-dark/80" title="Premier League, EPL">Premier League, EPL</p>
    </div><span class="inline-flex shrink-0 items-center rounded-md px-2 py-0.5 text-[11px] font-medium bg-secondary text-light/80">Soccer</span>
  </div>
</article>"
`;

exports[`LeagueCard > renders correctly when selected 1`] = `
"<article class="rounded-xl h-full border bg-light/80 p-4 transition-colors cursor-pointer select-none border-primary" role="button" tabindex="0" aria-label="View badge for English Premier League" aria-pressed="true">
  <div class="flex items-start justify-between gap-3">
    <div class="min-w-0 flex-1">
      <h3 class="truncate line-clamp-2 text-sm font-semibold text-dark">English Premier League</h3>
      <p class="mt-0.5 truncate text-xs text-dark/80" title="Premier League, EPL">Premier League, EPL</p>
    </div><span class="inline-flex shrink-0 items-center rounded-md px-2 py-0.5 text-[11px] font-medium bg-secondary text-light/80">Soccer</span>
  </div>
</article>"
`;
